[gd_scene load_steps=7 format=3 uid="uid://c60w1gih8xyxv"]

[ext_resource type="Script" path="res://ClickableObjects/phone.gd" id="1_kqa2j"]
[ext_resource type="PackedScene" uid="uid://cr8ow5elky823" path="res://ClickableObjects/Clickable.tscn" id="2_4mhec"]
[ext_resource type="Texture2D" uid="uid://blb521urs6j4q" path="res://Art/Counter/cellphone_call.png" id="2_hl4dy"]
[ext_resource type="Texture2D" uid="uid://c0gltx8a47cxc" path="res://Art/Counter/cellphone_nocall.png" id="4_msqhh"]
[ext_resource type="AudioStream" uid="uid://b32w7osl8bbh3" path="res://Sounds/Phone ring.wav" id="5_u6w3s"]
[ext_resource type="AudioStream" uid="uid://diegvw5mewo4j" path="res://Sounds/Phone pick up.wav" id="6_5frcb"]

[node name="Phone" type="Node2D"]
script = ExtResource("1_kqa2j")

[node name="DefaultPhone" type="Sprite2D" parent="."]
texture = ExtResource("4_msqhh")

[node name="RingingPhone" type="Sprite2D" parent="."]
texture = ExtResource("2_hl4dy")

[node name="Clickable" parent="RingingPhone" node_paths=PackedStringArray("visuals") instance=ExtResource("2_4mhec")]
position = Vector2(16, 8)
rotation = 0.264018
scale = Vector2(14.3972, -17.7292)
visuals = [NodePath("..")]

[node name="AudioRing" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_u6w3s")

[node name="AudioPickUp" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_5frcb")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
